# bevy-game

./: .gitignore  Cargo.toml  README.md
bevy_game/: Cargo.toml
bevy_game/src/: main.rs
src/: config.rs  main.rs  player.rs
src/assets/audio/: CREDITS.md
src/assets/characters/: characters.ron
src/assets/shaders/: particle_glow.wgsl
src/audio/: assets.rs  mod.rs  music.rs  sfx.rs
src/camera/: camera.rs  mod.rs
src/characters/: animation.rs  collider.rs  config.rs  facing.rs  input.rs  mod.rs  movement.rs  physics.rs  rendering.rs  spawn.rs  state.rs
src/collision/: debug.rs  map.rs  mod.rs  systems.rs  tile_type.rs
src/combat/: events.rs  health.rs  healthbar.rs  mod.rs  observers.rs  player_combat.rs  power_type.rs  systems.rs
src/enemy/: ai.rs  combat.rs  components.rs  mod.rs  spawn.rs
src/inventory/: inventory.rs  mod.rs  systems.rs
src/map/: assets.rs  generate.rs  mod.rs  models.rs  rules.rs  sockets.rs  tilemap.rs
src/particles/: components.rs  material.rs  mod.rs  systems.rs
src/save/: data.rs  mod.rs  systems.rs  ui.rs
src/state/: game_over.rs  game_state.rs  loading.rs  main_menu.rs  mod.rs  pause.rs
