[package]
name = "bevy-game"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.10.2"
pathfinding = "4.9"
bevy_procedural_tilemaps = "0.4.0"
serde = { version = "1.0.229", features = ["derive"] }
bevy_common_assets = { version = "0.17.0", features = ["ron"] }
bevy = { version = "0.19.0", features = ["mp3", "wav"] }
chrono = { version = "0.4.45", features = ["serde"] }
bincode = { package = "bincode-next", version = "3.1.1", features = ["serde"] }

[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies
[profile.dev.package."*"]
opt-level = 3
